added benefit-2 example

--- a/benefits_2/benefits.html
+++ b/benefits_2/benefits.html
@@ -38,7 +38,7 @@
                 <div data-field-name="Поле70642588">
                     <label>
                         <input
-                            name="_dasdasd_Поле21985454_asdasd"
+                            name="_dasdasd_Поле70642588_asdasd"
                             type="radio"
                             value="Параметр31064982"
                         />
@@ -54,6 +54,27 @@
                         />
                         <span>Оставить как есть, ничего не изменять</span>
                     </label>
+                </div>
+            </div>
+
+            <div>
+                <div data-field-name="Поле52832129">
+                    <select>
+                        <option value="Параметр24255555">Филиал 1</option>
+                        <option value="Параметр19803899">Филиал 2"</option>
+                    </select>
+                </div>
+            </div>
+
+            <div>
+                <div data-field-name="Поле27256182">
+                    <input type="text" />
+                </div>
+            </div>
+
+            <div>
+                <div data-field-name="Поле30398955">
+                    <input type="text" />
                 </div>
             </div>
         </main>
