--- a/benefits_2/benefits.html
+++ b/benefits_2/benefits.html
@@ -38,10 +38,12 @@
 
             <div>
                 <div data-field-name="Поле52832129">
-                    <select>
-                        <option value="Параметр24255555">Филиал 1</option>
-                        <option value="Параметр19803899">Филиал 2"</option>
-                    </select>
+                    <div data-field-name="_com_liferay$Поле52832129$0">
+                        <select>
+                            <option value="Параметр24255555">Филиал 1</option>
+                            <option value="Параметр19803899">Филиал 2"</option>
+                        </select>
+                    </div>
                 </div>
             </div>
 
