--- a/benefits_2/benefits.html
+++ b/benefits_2/benefits.html
@@ -55,13 +55,15 @@
 
             <div>
                 <div data-field-name="Поле21985454">
+                    Test
                     <label>
                         <input
                             name="_dasdasd_Поле21985454_asdasd"
                             type="radio"
                             value="Параметр31064982"
+                            checked
                         />
-                        <span>Перевести в гибкие льготы</span>
+                        <span>Да</span>
                     </label>
 
                     <label>
@@ -69,9 +71,8 @@
                             name="_dasdasd_Поле21985454_asdasd"
                             type="radio"
                             value="Параметр62088148"
-                            checked
                         />
-                        <span>Оставить как есть, ничего не изменять</span>
+                        <span>Нет</span>
                     </label>
                 </div>
             </div>
@@ -83,6 +84,19 @@
             </div>
         </main>
     </body>
+
+    <div>
+        <form
+            action="https://yamal.portals-t.gazprom-neft.local/web/jamal-gibkie-ljhgotih/forma-zapisi-na-uchastie-v-proekte?p_p_id=com_liferay_dynamic_data_mapping_form_web_portlet_DDMFormPortlet_INSTANCE_hfwi&amp;p_p_lifecycle=1&amp;p_p_state=normal&amp;p_p_mode=view&amp;_com_liferay_dynamic_data_mapping_form_web_portlet_DDMFormPortlet_INSTANCE_hfwi_javax.portlet.action=%2Fdynamic_data_mapping_form%2Fadd_form_instance_record&amp;p_auth=PhiA2ASb#p_com_liferay_dynamic_data_mapping_form_web_portlet_DDMFormPortlet_INSTANCE_hfwi"
+            class="form"
+            data-fm-namespace="_com_liferay_dynamic_data_mapping_form_web_portlet_DDMFormPortlet_INSTANCE_hfwi_"
+            id="_com_liferay_dynamic_data_mapping_form_web_portlet_DDMFormPortlet_INSTANCE_hfwi_fm"
+            method="post"
+            name="_com_liferay_dynamic_data_mapping_form_web_portlet_DDMFormPortlet_INSTANCE_hfwi_fm"
+            data-ddmforminstanceid="10884988"
+            data-senna-off="true"
+        ></form>
+    </div>
 
     <script>
         // Pass server-side variables to JavaScript
