--- a/benefits_2/benefits.html
+++ b/benefits_2/benefits.html
@@ -13,7 +13,7 @@
             <button data-confirm-benefit>Согласиться</button>
             <button data-refuse-benefit>Отказаться</button>
 
-            <div>
+            <div data-benefits-id="10666930">
                 <div data-field-name="Поле70642588">
                     <label>
                         <input
@@ -93,7 +93,7 @@
             id="_com_liferay_dynamic_data_mapping_form_web_portlet_DDMFormPortlet_INSTANCE_hfwi_fm"
             method="post"
             name="_com_liferay_dynamic_data_mapping_form_web_portlet_DDMFormPortlet_INSTANCE_hfwi_fm"
-            data-ddmforminstanceid="10884988"
+            data-ddmforminstanceid="10666930"
             data-senna-off="true"
         ></form>
     </div>
