--- a/events/index.html
+++ b/events/index.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </div>
-            <div class="registration-event-modal c-modal">
+            <div class="registration-event-modal c-modal c-modal_is-open">
                 <div class="c-modal__content registration-event-modal__content">
                     <div class="c-modal__header">
                         <h2 class="c-modal__title title-3">Регистрация на мероприятие</h2>
@@ -206,7 +206,7 @@
                                     </div>
                                 </div>
                                 <div
-                                    class="registration-event-form__item registration-event-form__selector"
+                                    class="registration-event-form__item registration-event-form__interval-selector registration-event-form__selector"
                                 >
                                     <label
                                         for="user-search"
@@ -394,6 +394,72 @@
                     <button data-id="button-register" class="button button_view_ghost">
                         Отменить запись
                     </button>
+                </li>
+            </template>
+            <template id="registration-event-input">
+                <div class="registration-event-input">
+                    <label class="registration-event-input__label">
+                        <span
+                            class="_font-size-m _line-height-small registration-event-input__name"
+                        ></span>
+                        <input
+                            placeholder=""
+                            name=""
+                            class="_font-size-s _line-height-normal"
+                            type="text"
+                            class="registration-event-input__input"
+                        />
+                    </label>
+
+                    <span class="registration-event-input__error"></span>
+                </div>
+            </template>
+            <template id="registration-event-default-selector">
+                <div class="registration-event-default-selector">
+                    <label
+                        class="_font-size-m _line-height-small registration-event-default-selector__name"
+                    ></label>
+                    <div class="selector">
+                        <div class="selector__header">
+                            <div class="selector__header-inner">
+                                <span class="selector__title text-1"></span>
+                            </div>
+
+                            <button
+                                type="button"
+                                class="selector__dropdown"
+                                aria-label="Открыть выпадающий список"
+                            >
+                                <svg
+                                    width="16"
+                                    height="16"
+                                    viewBox="0 0 16 16"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path d="M3.5 6L8 11L12.5 6H3.5Z" />
+                                </svg>
+                            </button>
+                        </div>
+                        <div class="selector__dropdown-content with-custom-scrollbar">
+                            <ul class="selector__dropdown-content__list"></ul>
+                        </div>
+                    </div>
+                </div>
+            </template>
+            <template id="registration-event-default-selector-input">
+                <li>
+                    <label class="selector__dropdown-content-checkbox selector-dropdown-checkbox">
+                        <input
+                            type="radio"
+                            class="selector-dropdown-checkbox__input visibility-hidden"
+                            name=""
+                            value=""
+                        />
+                        <div class="selector-dropdown-checkbox__check"></div>
+                        <div class="selector-dropdown-checkbox__content">
+                            <p class="selector-dropdown-checkbox__name text"></p>
+                        </div>
+                    </label>
                 </li>
             </template>
         </main>
